<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Permission controller</string>
    <string name="ok">OK</string>
    <string name="permission_search_keyword">permissions</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="uninstall_or_disable">Unintstall or disable</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="grant_dialog_button_deny">Deny</string>
    <string name="grant_dialog_button_deny_and_dont_ask_again">Deny \u0026 don\u2019t ask again</string>
    <string name="grant_dialog_button_no_upgrade">Keep \u201cWhile the app is in use\u201d</string>
    <string name="grant_dialog_button_no_upgrade_one_time">Keep \u201cOnly this time\u201d</string>
    <string name="grant_dialog_button_more_info">More info</string>
    <string name="grant_dialog_button_deny_anyway">Deny anyway</string>
    <string name="grant_dialog_button_dismiss">Dismiss</string>
    <string name="current_permission_template">
        <xliff:g id="current_permission_index" example="1">%1$s</xliff:g> of
        <xliff:g id="permission_count" example="2">%2$s</xliff:g></string>
    <string name="permission_warning_template">Allow
        &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> to
        <xliff:g id="action" example="do something">%2$s</xliff:g>?</string>
    <string name="permission_add_background_warning_template">Always allow
        &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> to
        <xliff:g id="action" example="do something">%2$s</xliff:g>?</string>
    <string name="allow_permission_foreground_only">Only while using app</string>
    <string name="allow_permission_always">Always</string>
    <string name="deny_permission_deny_and_dont_ask_again">Deny and don\u2019t ask again</string>
    <string name="permission_revoked_count"><xliff:g id="count" example="2">%1$d</xliff:g> disabled</string>
    <string name="permission_revoked_all">all disabled</string>
    <string name="permission_revoked_none">none disabled</string>
    <string name="grant_dialog_button_allow">Allow</string>
    <string name="grant_dialog_button_allow_always">Allow all the time</string>
    <string name="grant_dialog_button_allow_foreground">While using the app</string>
    <string name="grant_dialog_button_allow_one_time">Only this time</string>
    <string name="grant_dialog_button_allow_background">Allow all the time</string>
    <string name="grant_dialog_button_allow_all_files">Allow management of all files</string>
    <string name="grant_dialog_button_allow_media_only">Allow access to media files</string>
    <string name="app_permissions_breadcrumb">Apps</string>
    <string name="app_permissions">App permissions</string>
    <string name="unused_apps">Unused apps</string>
    <string name="app_disable_dlg_positive">Disable app</string>
    <string name="app_disable_dlg_text">If you disable this app, Android and other apps may no longer function as intended. Keep in mind, you can\u2019t delete this app since it came pre-installed on your device. By disabling, you turn this app off and hide it on your device.</string>
    <string name="app_permission_manager">Permission manager</string>
    <string name="never_ask_again">Don\'t ask again</string>
    <string name="no_permissions">No permissions</string>
    <string name="additional_permissions">Additional permissions</string>
    <string name="app_permissions_info_button_label">Open app info</string>
    <plurals name="additional_permissions_more">
        <item quantity="one"><xliff:g id="count" example="1">%1$d</xliff:g> more</item>
        <item quantity="other"><xliff:g id="count" example="2">%1$d</xliff:g> more</item>
    </plurals>
    <string name="old_sdk_deny_warning">This app was designed for an older version of Android. Denying permission may cause it to no longer function as intended.</string>
    <string name="default_permission_description">perform an unknown action</string>
   <string name="app_permissions_group_summary"><xliff:g id="count" example="10">%1$d</xliff:g> of <xliff:g id="count" example="10">%2$d</xliff:g> apps allowed</string>
    <string name="app_permissions_group_summary2"><xliff:g id="count" example="10">%1$d</xliff:g>/<xliff:g id="count" example="10">%2$d</xliff:g> apps allowed</string>
   <string name="menu_show_system">Show system</string>
   <string name="menu_hide_system">Hide system</string>
   <string name="no_apps">No apps</string>
   <string name="location_settings">Location Settings</string>
   <string name="location_warning"><xliff:g id="app_name" example="Package Installer">%1$s</xliff:g> is a provider of location services for this device. Location access can be modified from location settings.</string>
   <string name="system_warning">If you deny this permission, basic features of your device may no longer function as intended.</string>
   <string name="permission_summary_enforced_by_policy">Enforced by policy</string>
   <string name="permission_summary_disabled_by_policy_background_only">Background access disabled by policy</string>
   <string name="permission_summary_enabled_by_policy_background_only">Background access enabled by policy</string>
   <string name="permission_summary_enabled_by_policy_foreground_only">Foreground access enabled by policy</string>
   <string name="permission_summary_enforced_by_admin">Controlled by admin</string>
    <string name="permission_summary_disabled_by_admin_background_only">Background access disabled by admin</string>
    <string name="permission_summary_enabled_by_admin_background_only">Background access enabled by admin</string>
    <string name="permission_summary_enabled_by_admin_foreground_only">Foreground access enabled by admin</string>
    <string name="permission_summary_enabled_system_fixed">Device requires this permission to operate</string>
    <string-array name="background_access_chooser_dialog_choices">
       <item>@string/permission_access_always</item>
       <item>@string/permission_access_only_foreground</item>
       <item>@string/permission_access_never</item>
   </string-array>
   <string name="permission_access_always">Allow all the time</string>
   <string name="permission_access_only_foreground">Allow only while using the app</string>
   <string name="permission_access_never">Deny</string>
   <string name="loading">Loading\u2026</string>
   <string name="all_permissions">All permissions</string>
   <string name="other_permissions">Other app capabilities</string>
   <string name="permission_request_title">Permission request</string>
   <string name="screen_overlay_title">Screen overlay detected</string>
   <string name="screen_overlay_message">To change this permission setting, you first have to turn off the screen overlay from Settings \u003e Apps</string>
    <string name="screen_overlay_button">Open settings</string>
    <string name="wear_not_allowed_dlg_title">Android Wear</string>
    <string name="wear_not_allowed_dlg_text">Install/Uninstall actions not supported on Wear.</string>
    <string name="permission_review_title_template_install">Choose what to allow
        &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> to access</string>
    <string name="permission_review_title_template_update">
        &lt;b><xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b> has been updated.
        Choose what to allow this app to access.</string>
    <string name="review_button_cancel">Cancel</string>
    <string name="review_button_continue">Continue</string>
    <string name="new_permissions_category">New permissions</string>
    <string name="current_permissions_category">Current permissions</string>
    <string name="message_staging">Staging app&#8230;</string>
    <string name="app_name_unknown">Unknown</string>
    <string name="help_app_permissions" translatable="false"></string>
    <string name="permission_usage_title">Dashboard</string>
    <plurals name="permission_usage_summary">
        <item quantity="one">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\n<xliff:g id="num" example="42">%2$s</xliff:g> access</item>
        <item quantity="other">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\n<xliff:g id="num" example="42">%2$s</xliff:g> accesses</item>
    </plurals>
    <string name="permission_usage_summary_background">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\nLast accessed in the background</string>
    <plurals name="permission_usage_summary_duration">
        <item quantity="one">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\n<xliff:g id="num" example="42">%2$s</xliff:g> access\nDuration: <xliff:g id="time" example="2 hours">%3$s</xliff:g></item>
        <item quantity="other">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\n<xliff:g id="num" example="42">%2$s</xliff:g> accesses\nDuration: <xliff:g id="time" example="2 hours">%3$s</xliff:g></item>
    </plurals>
    <plurals name="permission_usage_summary_background_duration">
        <item quantity="one">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\n<xliff:g id="num" example="42">%2$s</xliff:g> access (<xliff:g id="num" example="7">%3$s</xliff:g> in background)\nDuration: <xliff:g id="time" example="2 hours">%3$s</xliff:g></item>
        <item quantity="other">Last access: <xliff:g id="time" example="12:10 PM">%1$s</xliff:g>\n<xliff:g id="num" example="42">%2$s</xliff:g> accesses (<xliff:g id="num" example="7">%3$s</xliff:g> in background)\nDuration: <xliff:g id="time" example="2 hours">%3$s</xliff:g></item>
    </plurals>
    <string name="permission_usage_any_permission">Any permission</string>
    <string name="permission_usage_any_time">Any time</string>
    <string name="permission_usage_last_7_days">Last 7 days</string>
    <string name="permission_usage_last_day">Last 24 hours</string>
    <string name="permission_usage_last_hour">Last 1 hour</string>
    <string name="permission_usage_last_15_minutes">Last 15 minutes</string>
    <string name="permission_usage_last_minute">Last 1 minute</string>
    <string name="no_permission_usages">No permission usages</string>
    <string name="permission_usage_list_title_any_time">Most recent access at any time</string>
    <string name="permission_usage_list_title_last_7_days">Most recent access in last 7 days</string>
    <string name="permission_usage_list_title_last_day">Most recent access in last 24 hours</string>
    <string name="permission_usage_list_title_last_hour">Most recent access in last 1 hour</string>
    <string name="permission_usage_list_title_last_15_minutes">Most recent access in last 15 minutes</string>
    <string name="permission_usage_list_title_last_minute">Most recent access in last 1 minute</string>
    <string name="permission_usage_bar_chart_title_any_time">Permission usage at any time</string>
    <string name="permission_usage_bar_chart_title_last_7_days">Permission usage in last 7 days</string>
    <string name="app_permission_button_allow_always">Allow all the time</string>
    <string name="app_permission_button_allow_foreground">Allow only while using the app</string>
    <string name="app_permission_button_deny">Deny</string>
    <string name="adjust_user_sensitive_globally_title">Show system app usage</string>
    <string name="adjust_user_sensitive_globally_summary">Show system app use of permissions in status bar, dashboard \u0026 elsewhere</string>
    <string name="adjust_user_sensitive_per_app_header">Highlight usage for the following</string>
    <string name="assistant_record_audio_user_sensitive_title">Show assistant trigger detection</string>
    <string name="assistant_record_audio_user_sensitive_summary">Show icon in status bar when microphone is used to activate voice assistant</string>
</resources>