<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<com.android.packageinstaller.permission.ui.ManualLayoutFrame
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipChildren="false"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="32dp"
    android:clipToPadding="false">

    <ScrollView
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dialog_container"
            android:animateLayoutChanges="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="16dp"
            android:background="@drawable/dialog_background">

            <FrameLayout
                android:id="@+id/desc_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dip"
                android:paddingStart="20dip"
                android:paddingEnd="16dip">
                <include
                    layout="@layout/permission_description" />
            </FrameLayout>

            <RadioGroup
                android:id="@+id/foreground_or_always_radiogroup"
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dip"
                android:layout_marginEnd="20dip"
                android:layout_marginBottom="-12dp" >

                <RadioButton
                    android:id="@+id/foreground_only_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_permission_foreground_only"
                    style="@android:attr/radioButtonStyle" />

                <RadioButton
                    android:id="@+id/always_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_permission_always"
                    style="@android:attr/radioButtonStyle" />

                <RadioButton
                    android:id="@+id/deny_dont_ask_again_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deny_permission_deny_and_dont_ask_again"
                    style="@android:attr/radioButtonStyle" />

            </RadioGroup>

            <TextView
                android:id="@+id/detail_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dip"
                android:layout_marginEnd="20dip"
                android:layout_marginBottom="-12dp"
                android:textColor="?android:attr/textColorPrimary"
                style="?android:attr/textAppearanceSmall"/>

            <Space
                android:id="@+id/detail_message_do_not_ask_checkbox_space"
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <CheckBox
                android:id="@+id/do_not_ask_checkbox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dip"
                android:layout_marginEnd="16dip"
                android:layout_marginBottom="-12dp"
                android:minHeight="48dp"
                android:text="@string/never_ask_again"
                android:textColor="?android:attr/textColorPrimary"
                style="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="26dip"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="16dip">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <!-- dummy to enforce correct height -->
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:visibility="invisible">
                    </Button>

                    <TextView
                        android:id="@+id/current_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="12dp"
                        android:singleLine="true"
                        style="?android:attr/textAppearanceSmall"
                        android:textColor="?android:attr/textColorSecondary"
                        android:visibility="gone">
                    </TextView>

                    <Button
                        android:id="@+id/permission_more_info_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/grant_dialog_button_more_info"
                        android:visibility="gone">
                    </Button>
                </LinearLayout>

                <com.android.packageinstaller.permission.ui.ButtonBarLayout
                    android:id="@+id/button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="bottom">

                    <Space
                        android:id="@+id/spacer"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:visibility="invisible" >
                    </Space>

                    <Button
                        android:id="@+id/permission_deny_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/grant_dialog_button_deny" >
                    </Button>

                    <Button
                        android:id="@+id/permission_allow_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/grant_dialog_button_allow" >
                    </Button>

                </com.android.packageinstaller.permission.ui.ButtonBarLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</com.android.packageinstaller.permission.ui.ManualLayoutFrame>
