<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 The Android Open Source Project

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
  -->

<!--
  Defines the layout of the splash screen that displays the security
  settings required for an application and requests the confirmation of the
  user before it is installed.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- title bar -->
    <LinearLayout android:id="@+id/app_snippet"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <ImageView android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_file_download"
                android:tint="?android:attr/colorControlNormal" />

        <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/app_name_unknown"
                android:textAppearance="?android:attr/titleTextStyle" />

    </LinearLayout>

    <!-- header comment -->
    <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/message_staging"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- content -->
    <View android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <!-- Bottom buttons -->
    <LinearLayout style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

        <!-- spacer to push button to the right -->
        <View android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <Button android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>


