<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2018 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:background="?android:attr/selectableItemBackground"
        android:theme="@*android:style/Theme.DeviceDefault.PermissionGrant">

        <TextView
            android:id="@+id/permission_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@*android:style/PermissionGrantRadioGroup" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/allow_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/app_permission_button_allow_always"
                    style="@android:attr/radioButtonStyle" />

                <LinearLayout
                    android:id="@+id/two_target_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/list_divider_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/widget_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minWidth="64dp"
                    android:orientation="vertical" />

            </LinearLayout>

            <RadioButton
                android:id="@+id/foreground_only_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_permission_button_allow_foreground"
                style="@android:attr/radioButtonStyle" />

            <RadioButton
                android:id="@+id/deny_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_permission_button_deny"
                style="@android:attr/radioButtonStyle" />

        </RadioGroup>

        <TextView
            android:id="@+id/permission_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height=".75dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/dividerHorizontal"/>

    <TextView
        android:id="@+id/usage_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="?android:attr/textColorSecondary"/>

    <TextView
        android:id="@+id/usage_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="?android:attr/colorAccent"
        android:clickable="true" />

</LinearLayout>